# FreakMediaPlayer

./: .gitattributes  .gitignore  CHANGELOG.md  FreakMediaPlayer.dev.spec  KNOWN_ISSUES.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SHA256SUMS.txt  THIRD_PARTY_NOTICES.md  USER_GUIDE.md  bekannte bugs und enticklungswünsche.txt  build.bat  build_linux.sh  build_portable.bat  fast_build.bat  pyproject.toml
docs/: ARCHITECTURE.md  INTERNET_RADIO_ROADMAP.md  SKINS.md
packaging/linux/: freak-media-player  freak-media-player.desktop  freak-media-player.spec.in  install.sh
scripts/: prepare_build_env.bat  register_file_associations.ps1  unregister_file_associations.ps1
src/freak_media_player/: __init__.py  main.py
src/freak_media_player/app/: __init__.py  application.py  bootstrap.py
src/freak_media_player/config/: paths.py  settings.py
src/freak_media_player/core/: equalizer_math.py  events.py  ports.py
src/freak_media_player/database/: __init__.py  connection.py  migrations.py  repositories.py  session.py
src/freak_media_player/models/: equalizer.py  media.py  playback.py  playlist.py
src/freak_media_player/player/: pcm.py  (+14 more)
tests/: __init__.py  test_artwork.py  test_audio_dsp.py  test_audio_samples.py  test_backup_service.py  test_bootstrap.py  test_build_configuration.py  test_channel_mixer.py  test_collapsible_panel.py  test_database.py  test_daw_audio_backend.py  test_decode_worker_stress.py  test_diagnostics.py  test_equalizer.py  test_equalizer_panel.py  test_equalizer_response_graph.py  test_first_start.py  test_internet_radio.py  test_library_import_worker.py  test_library_scale.py  test_local_files.py  test_local_tracks_panel.py  test_maintenance_service.py  test_metadata_editor.py  test_modular_main_window.py  test_navigation.py  test_paths.py  test_performance_optimizations.py  test_playback_queue.py  test_playback_service.py  test_player_bar.py  test_playlist_panel.py  test_playlist_service.py  test_plugin_manager.py  test_radio_logo_cache.py  test_radio_network_integration.py  test_radio_transfer.py  test_search_service.py  test_settings.py  test_settings_dialog.py  (+4 more)
(+63 files in other folders)
