[project]
name = "freak-media-player"
version = "1.1.0"
description = "A modular native Windows media player with provider and plugin architecture."
requires-python = ">=3.11"
dependencies = [
    "av>=14.0",
    "numpy>=2.0,<2.4",
    "PySide6>=6.7",
    "scipy>=1.14,<1.17",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.10",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
freak-media-player = "freak_media_player.main:main"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
freak_media_player = [
    "assets/*.png",
    "assets/*.ico",
    "assets/icons/*.png",
    "assets/skins/fastilicious/*.png",
    "assets/skins/fastilicious/icons/*.png",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
